# SCRAPPY-MK1

./: .gitignore  README.md
Hardware/Electrical/REACH_electrical/: REACH_electrical.kicad_prl  REACH_electrical.kicad_pro
Hardware/Electrical/SCRAPPY_PCB/: #auto_saved_files#  SCRAPPY_PCB-B_Cu.gbr  SCRAPPY_PCB-B_Mask.gbr  SCRAPPY_PCB-B_Silkscreen.gbr  SCRAPPY_PCB-Edge_Cuts.gbr  SCRAPPY_PCB-F_Cu.gbr  SCRAPPY_PCB-F_Mask.gbr  SCRAPPY_PCB-F_Silkscreen.gbr  SCRAPPY_PCB-NPTH.drl  SCRAPPY_PCB-PTH.drl  SCRAPPY_PCB-job.gbrjob  SCRAPPY_PCB.kicad_pcb  SCRAPPY_PCB.kicad_prl  SCRAPPY_PCB.kicad_pro  SCRAPPY_PCB.step  (+2 more)
esp_dev_and_testing/BLDC_Position_Controller/: sdkconfig.old
esp_dev_and_testing/esp32_bldc_motors/: CMakeLists.txt  sdkconfig.old
esp_dev_and_testing/esp32_camera_stream/: CMakeLists.txt  compare.txt  sdkconfig
esp_dev_and_testing/esp32_camera_stream/application/camera1/: CMakeLists.txt  camera1.cpp  camera1.h
esp_dev_and_testing/esp32_camera_stream/core/: CMakeLists.txt
esp_dev_and_testing/esp32_camera_stream/core/include/: main.h
esp_dev_and_testing/esp32_camera_stream/core/src/: main.cpp  mainsave.txt
esp_dev_and_testing/esp32_control_software/: SCRAPPY-CONTROLLER.ino
esp_dev_and_testing/esp32_testing/: esp32_testing.code-workspace  notes.txt
project_files/: Calibration_Values.txt  MOTORCALIB.txt  Req_and_Dev-SCRAPPY.xlsx  SCRAPPY_statechart.txt
project_files/DIAGRAMS/: .$Mechanical_Control.drawio.bkp  .$Mechanical_Control.drawio.dtmp  .$SCRAPPY_State_Chart.drawio.bkp  .$software_struct_diagram.drawio.bkp  Mechanical_Control.drawio  SCRAPPY_State_Chart.drawio  software_struct_diagram.drawio  textual_description.txt
src/: PositionPoint.txt  scrappy_gui.py  scrappy_server.py  serial_reader.py
src/SCRAPPY_CONTROLLER/: CMakeLists.txt  oldcodebldc.txt  sdkconfig.old
src/SCRAPPY_CONTROLLER V2/: CMakeLists.txt
src/SCRAPPY_CONTROLLER V2/main/: CMakeLists.txt  main.c
src/SCRAPPY_CONTROLLER/applications/local_control/: CMakeLists.txt
src/SKIPPY_CONTROLLER/: SKIPPY_Code.ino
(+66 files in other folders)
